Add Load More button to see more video list entries

--- a/src/templates/app.html
+++ b/src/templates/app.html
@@ -10,6 +10,7 @@
     </div>
     <div class="col-md-5">
       <video-list  videos="$ctrl.videos"  on-click="$ctrl.selectVideo"  ><h5><em>videoList</em> component goes here</h5></video-list>
+      <load-more load-more="$ctrl.searchNextPage"></load-more>
     </div>
   <div>
 </div>
